[gd_scene load_steps=10 format=3 uid="uid://detiajykv3ie3"]

[ext_resource type="Script" path="res://scripts/abilities/LaserBeam.gd" id="1_oxpuc"]
[ext_resource type="Texture2D" uid="uid://no2fxg51hmtp" path="res://assets/effects/laser_beam.png" id="2_ee11r"]
[ext_resource type="Texture2D" uid="uid://boijhj4sxeq8b" path="res://assets/effects/laser_particle.png" id="2_h3g2x"]
[ext_resource type="Texture2D" uid="uid://u1r5jc5qp125" path="res://assets/effects/light_particle.png" id="3_d8pvq"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_57ib3"]
particle_flag_disable_z = true
spread = 40.11
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.3

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7e6vd"]
particle_flag_disable_z = true
spread = 50.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.5
color = Color(1, 1, 0.909804, 1)

[sub_resource type="Curve" id="Curve_qpm25"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.506024, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_r5jrc"]
curve = SubResource("Curve_qpm25")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_w8vf5"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(60, 10, 1)
direction = Vector3(-1, 0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 30.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = 100.0
tangential_accel_max = 100.0
scale_min = 0.3
scale_max = 0.3
scale_curve = SubResource("CurveTexture_r5jrc")

[node name="LaserBeam" type="RayCast2D"]
show_behind_parent = true
z_index = 3
exclude_parent = false
target_position = Vector2(1000, 0)
collision_mask = 18
script = ExtResource("1_oxpuc")

[node name="Line2D" type="Line2D" parent="."]
show_behind_parent = true
texture_repeat = 2
points = PackedVector2Array(0, 0, 54, 0)
width = 8.0
default_color = Color(1, 1, 0.909804, 1)
texture = ExtResource("2_ee11r")
texture_mode = 1
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 4

[node name="CastingParticles" type="GPUParticles2D" parent="."]
process_material = SubResource("ParticleProcessMaterial_57ib3")
texture = ExtResource("3_d8pvq")
lifetime = 0.2

[node name="CollisionParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_7e6vd")
texture = ExtResource("2_h3g2x")
lifetime = 0.3

[node name="BeamParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_w8vf5")
texture = ExtResource("3_d8pvq")
lifetime = 0.5
preprocess = 1.0
randomness = 1.0

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.15

[node name="SoundTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="SoundTimer" to="." method="_on_sound_timer_timeout"]
